Add "remove site" button

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,6 +16,7 @@
 <body>
   <h1>Slowdown</h1>
   <button id="add">Add site</button>
+  <button id="add">Remove site</button>
   <script type="module" src="popup.js"></script>
 </body>
 
